# moodle_question_import

./: .clang-format  .gitignore  CMakeLists.txt  TestConvert.pro  TestConvert.ts  TestConvert_ru.ts  csvdialog.cpp  csvdialog.h  csvdialog.ui  dialogconfig.cpp  dialogconfig.h  dialogconfig.ui  dialogreplace.cpp  dialogreplace.h  dialogreplace.ui  fragments  highlighterdialog.cpp  highlighterdialog.h  highlighterdialog.ui  install.iss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myhighlighter.cpp  myhighlighter.h  postlink.bat  project.list  readme-ru.md  readme.md  reformat.sh  textdialog.cpp  textdialog.h  uncrustify.cfg
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
doc/: manual.htm
doc/manual_files/: all.css  first.js  yui_combo_004.php  yui_combo_005.php
images/: icon.qrc
